apps/production/liftlog/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: liftlog-web
  namespace: liftlog
  labels:
    app: liftlog-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: liftlog-web
  template:
    metadata:
      labels:
        app: liftlog-web
    spec:
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: web
          image: ghcr.io/chenarrr/3d-website-for-liftlog:latest # {"$imagepolicy": "flux-system:liftlog-web"}
          ports:
            - containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
