apps/production/liftlog/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: liftlog-web
  namespace: liftlog
spec:
  selector:
    app: liftlog-web
  ports:
    - name: http
      port: 80
      targetPort: 80
